--- a/style.css
+++ b/style.css
@@ -7,15 +7,12 @@ html {
     padding: 0;
 }
 body {
-    background: #e5d0e5;
+    background: #f7f5bc;
 }
 
 /* 1. Header (Container styles only) */
 header {
-    background: #623D68;
-    height: 20rem;
-    margin: 10rem 4rem 1rem 4rem;
-    z-index: 2;
+    background: darkmagenta;
     /* Flex alignment removed as requested */
 }
 
@@ -44,9 +41,9 @@ header {
     position: absolute;
     left: 0;
     top: 0;
-    width: 100%;
+    /*width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 1;*/
     
     /* The Yellow Gradient */
     background: linear-gradient(to bottom, #fffec7 25%, #ffcc00 75%);
@@ -67,52 +64,44 @@ header {
     max-width: 50rem;
     max-height: 28rem;
     position: absolute;
-    right: 64rem;
-    top: 120px;
+    left: 61rem;
+    top: 2rem;
     z-index: 3;
 }
 .egg {
     font-size: 15rem;
-    position: absolute;
-    top: 23rem;
-    left: 30rem;
-    z-index: 3;
 }
-nav {
+.admain {
+    position: relative;
     background: paleturquoise;
     height: 10rem;
-    z-index: 2;
+    z-index: 0;
+    overflow: hidden;
+}
+@keyframes scrollleft {
+    to {
+        left: -980px;
+    }
+}
+.ad {
+    position: absolute;
+    left: 100%;
+    animation-name: scrollleft;
+    animation-duration: 10s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+.x1 {
+    animation-delay: calc(10s / 2 * (2 - 1) * -1);
+}
+.x2 {
+    animation-delay: calc(10s / 2 * (2 - 2) * -1);
 }
 main {
-    font-size: 1.4rem;
-    margin: 4rem;
+    font-size: 1rem;
 }
 b {
     color: red;
-}
-#uou{
-    display: flex;
-    gap: 1rem;
-    margin: 4rem 2rem;
-}
-.w {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    border-top: 0.5rem solid #0b2f3a;
-    border-bottom: 0.5rem solid #0b2f3a;
-}
-#xd{
-    display: flex;
-    background: beige;
-    width: 70rem;
-    align-items: center;
-    justify-content: center;
-}
-
-#o {
-    background: paleturquoise;
-    height: 10rem;
 }
 #cf{
     display: flex;
@@ -166,4 +155,19 @@ b {
         width: 100%;
         position: fixed; /* Esto congela el fondo totalmente */
     }
+}
+#nav2 {
+    background: #e6cc00;
+    height: 7rem;
+    margin-top: 0.5rem;
+    z-index: 0;
+}
+#vt {
+    font-size: 4rem;
+    position: absolute;
+    top: 27rem;
+    right: 0.5rem;
+    color: dimgray;
+    z-index: 10;
+    font-family: anton;
 }
