--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 /* 1. Header (Container styles only) */
 header {
-    background: darkmagenta;
+    background: white;
     top: 0;
     position: sticky;
     /* Flex alignment removed as requested */
@@ -68,7 +68,7 @@ main {
     font-size: 1rem;
 }
 #cf{
-    min-height: 100vh;
+    height: 100vh;
     display: grid;
     grid-template-columns: 15rem 1fr;
     grid-template-rows: 1fr auto;
@@ -78,7 +78,7 @@ main {
 }
 aside{
     grid-area: sidebar;
-    background-color: #fff0ff;
+    background-color: transparent;
     border-right: solid #00000040;
 }
 main{
@@ -98,6 +98,7 @@ footer{
 #terbaru{
     background: #e8bcf0;
     padding: 0.3rem;
+    height: 10rem;
 }
 #terbaru p {
     font-family: Anton;
@@ -105,4 +106,16 @@ footer{
 #versi p{
     background: #da8ee7;
     font-family: Arial, Helvetica, sans-serif;
+}
+#bt{
+    height: 100vh;
+    width: 15rem;
+    position: fixed;
+    top: 7rem;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background: #fff0ff;
+    border-right: solid #00000040;
 }
