--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
 * {
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
 }
 body {
     background: white;
@@ -68,8 +69,8 @@ main {
     font-size: 1rem;
 }
 #cf{
-    height: 100vh;
     display: grid;
+    padding: 0;
     grid-template-columns: 15rem 1fr;
     grid-template-rows: 1fr auto;
     grid-template-areas: 
@@ -118,4 +119,7 @@ footer{
     justify-content: flex-start;
     background: #fff0ff;
     border-right: solid #00000040;
+}
+img {
+    padding: 0.2rem 0 0.2rem 0;
 }
