--- a/style.css
+++ b/style.css
@@ -122,4 +122,12 @@ footer{
 }
 img {
     padding: 0.2rem 0 0.2rem 0;
+    max-width: 20rem;
+    margin: 0;
+}
+.rikka{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 0;
 }
