--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ footer{
     border-right: solid #00000040;
 }
 img {
-    padding: 0.2rem 0 0.2rem 0;
+    padding: 0.2rem 0 0 0;
     max-width: 20rem;
     margin: 0;
 }
