--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body {
 
 /* 1. Header (Container styles only) */
 header {
-    background: white;
-    top: 0;
+    background: darkmagenta;
+    top: 2rem;
     position: sticky;
     /* Flex alignment removed as requested */
 }
@@ -69,6 +69,7 @@ main {
     font-size: 1rem;
 }
 #cf{
+    margin-top: 4rem;
     display: grid;
     padding: 0;
     grid-template-columns: 15rem 1fr;
@@ -94,7 +95,8 @@ footer{
     background: #b57edc;
     height: 2rem;
     position: sticky;
-    top: 5rem;
+    top: 7rem;
+    z-index: 10;
 }
 #terbaru{
     background: #e8bcf0;
@@ -112,7 +114,7 @@ footer{
     height: 100vh;
     width: 15rem;
     position: fixed;
-    top: 7rem;
+    top: 9rem;
     left: 0;
     display: flex;
     flex-direction: column;
@@ -137,4 +139,11 @@ h2{
     width: 25rem;
     text-align: center;
     align-content: center ;
+}
+.logo{
+    max-height: 9rem;
+    position: absolute;
+    top: -0.3rem;
+    z-index: 888;
+    left: 20rem;
 }
