--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@ html {
     font-family: sans-serif;
 }
 body {
-    background: white;
+    background: beige;
 }
 
 /* 1. Header (Container styles only) */
 header {
-    background: darkmagenta;
+    background: white;
     top: 2rem;
     position: sticky;
     /* Flex alignment removed as requested */
@@ -86,20 +86,21 @@ aside{
 main{
     grid-area: main;
     padding: 1rem;
+    display: none;
 }
 footer{
     grid-area: footer;
 }
 
 #nav2 {
-    background: #b57edc;
+    background: sandybrown;
     height: 2rem;
     position: sticky;
     top: 7rem;
     z-index: 10;
 }
 #terbaru{
-    background: #e8bcf0;
+    background: navajowhite;
     padding: 0.3rem;
     height: 10rem;
 }
@@ -107,7 +108,7 @@ footer{
     font-family: Anton;
 }
 #versi p{
-    background: #da8ee7;
+    background: whitesmoke;
     font-family: Arial, Helvetica, sans-serif;
 }
 #bt{
@@ -119,7 +120,7 @@ footer{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    background: #fff0ff;
+    background: lightgoldenrodyellow;
     border-right: solid #00000040;
 }
 img {
@@ -153,4 +154,9 @@ h2{
 }
 #other {
     max-width: 70%;
+}
+#adhs {
+    position: absolute;
+    top: 10rem;
+    right: 1rem;
 }
