--- a/style.css
+++ b/style.css
@@ -9,14 +9,16 @@ html {
 }
 body {
     background: beige;
+    margin: 0;
+    background-image: url(./img/telur.png);
+    background-size: 160px 160px;
+    background-repeat: no-repeat;
+    width: 100%;
+    background-position: 105% 114%;
 }
-
-/* 1. Header (Container styles only) */
 header {
-    background: white;
-    top: 2rem;
-    position: sticky;
-    /* Flex alignment removed as requested */
+    background: sandybrown;
+    padding: 0.5rem;
 }
 
 /* 2. The "Egg" Class - Base Layer (Thick Outline) */
@@ -33,9 +35,6 @@ header {
     color: #0b2f3a; 
     -webkit-text-stroke: 0.7rem #0b2f3a; 
     paint-order: stroke fill;
-    
-    /* White Outer Glow */
-    filter: drop-shadow(0px 0px 0.5rem rgba(255, 255, 255, 0.9));
 }
 
 /* 3. The "Egg" Class - Top Layer (Gradient) */
@@ -65,98 +64,58 @@ header {
 .egg {
     font-size: 5rem;
 }
-main {
-    font-size: 1rem;
-}
-#cf{
-    margin-top: 4rem;
-    display: grid;
-    padding: 0;
-    grid-template-columns: 15rem 1fr;
-    grid-template-rows: 1fr auto;
-    grid-template-areas: 
-    "sidebar main"
-    "sidebar footer"
-}
-aside{
-    grid-area: sidebar;
-    background-color: transparent;
-    border-right: solid #00000040;
-}
-main{
-    grid-area: main;
-    padding: 1rem;
-    display: none;
-}
-footer{
-    grid-area: footer;
-}
-
-#nav2 {
+#terbaru {
+    margin: 3rem 13rem 0 2rem;
     background: sandybrown;
-    height: 2rem;
-    position: sticky;
-    top: 7rem;
-    z-index: 10;
+    border: solid black 1px;
+    /*display: flex;
+    flex-direction: column;*/
 }
-#terbaru{
-    background: navajowhite;
-    padding: 0.3rem;
-    height: 10rem;
+.brown {
+    background: saddlebrown;
+    color: white;
 }
-#terbaru p {
-    font-family: Anton;
+.white {
+    padding: 1rem;
+    font-size: 1.5rem;
 }
-#versi p{
-    background: whitesmoke;
-    font-family: Arial, Helvetica, sans-serif;
+main {
+    background: white;
+    border: solid black 1px;
+    margin: 2rem;
 }
-#bt{
-    height: 100vh;
-    width: 15rem;
-    position: fixed;
-    top: 9rem;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    background: lightgoldenrodyellow;
-    border-right: solid #00000040;
+#konten {
+    height: 50rem;
+    display: grid;
+    grid-auto-rows: 5rem;
 }
-img {
-    padding: 0.2rem 0 0 0;
+#white {
+    background: white;
+}
+#hsj {
     max-width: 20rem;
-    margin: 0;
+    margin-left: 5rem;
 }
-.rikka{
+footer {
     position: absolute;
     bottom: 0;
+    left: 0;
     right: 0;
-    z-index: 0;
-}
-h2{
-    background: beige;
-    height: 30rem;
+    background: #914F3b;
+    color: white;
+    height: 7rem;
+    padding: 3rem;
     text-align: center;
-    align-content: center ;
+    font-size: 1.5rem;
 }
-.logo{
-    max-height: 9rem;
-    position: absolute;
-    top: -0.3rem;
-    z-index: 888;
-    left: 20rem;
+#a {
+    color: white;
 }
-.inf{
-    background: #fff0ff;
-    padding: 0.5rem;
-    margin: -0.1rem;
+#xd {
+    background: sandybrown;
 }
-#other {
-    max-width: 70%;
-}
-#adhs {
-    position: absolute;
-    top: 10rem;
-    right: 1rem;
+nav {
+    color: saddlebrown;
+    background: saddlebrown;
+    height: 0.7rem;
 }
