--- a/huashijiep/css/down.css
+++ b/huashijiep/css/down.css
@@ -1,3 +1,6 @@
+body {
+  font-family: monospace;
+}
 main{
   margin-left: auto;
   margin-right: auto;
@@ -11,22 +14,27 @@ img{
   margin-right: auto;
 }
 body {
-  background: beige;
+  background: #242424;
+  color: white;
 }
 mark{
-  background: #FFEA80;
+  color: lightgoldenrodyellow;
+  background: rgba(1, 1, 1, 0);
 }
 p {
-  background: #FDF4CB;
+  background: #2C2C2C;
 }
 h2 {
-  background: #FFC300;
+  background: #171717;
   width: 100%;
 }
 h1 {
-  background: #FFB915;
+  background: #171717;
   padding: 1rem;
   border: black solid 3px;
   border-left: 0;
   border-right: 0;
+}
+a {
+  color: yellow;
 }
