--- a/style.css
+++ b/style.css
@@ -129,19 +129,34 @@ img {
 .ads {
     display: flex;
     gap: 2px;
-    animation: spin 5s Infinite linear;
+    animation: spin 7s Infinite linear;
     padding-right: 2px;
 }
 .carousel {
     display: flex;
-    margin-top: 1rem;
+    margin-top: 4rem;
     border: black solid 1px;
     margin-left: auto;
     margin-right: auto;
     overflow-x: auto;
-    width: 250px;
+    width: 500px;
+    margin-bottom: 0;
 }
 @keyframes spin {
     from {translate: 0;}
     to {translate: -100%;}
+}
+h3 {
+    position: absolute;
+    top: 16.5rem;
+    font-family: anton;
+    text-align: center;
+    font-size: 2rem;
+    color: white;
+    background: saddlebrown;
+    width: 100%;
+    border: black solid 2px;
+}
+.carousel::-webkit-scrollbar {
+    display: none;
 }
