--- a/huashijiep/css/down.css
+++ b/huashijiep/css/down.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
+
+.fjalla-one-regular {
+  font-family: "Fjalla One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
   font-family: monospace;
 }
@@ -37,4 +45,32 @@ h1 {
 }
 a {
   color: yellow;
+}
+header{
+  display: flex;
+  align-items: flex-start;
+  gap: 0.5rem;
+  background: white;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  height: auto;
+}
+.imglogo{
+  max-width: 3rem;
+  border-radius: 8px;
+}
+#huevo{
+  margin-left: auto;
+}
+.hu {
+  font-size: 2.3rem;
+  font-family: Fjalla One;
+  margin: 0;
+  margin-right: auto;
+  background: none;
+  height: auto;
+  color: black;
+  padding: 0;
+  border: 0;
 }
